--- a/package.json
+++ b/package.json
@@ -65,6 +65,9 @@
     "normalize.css": "^4.0.0",
     "react": "^15.0.0",
     "react-dom": "^15.0.0",
-    "react-router": "^3.0.2"
+    "react-intl": "^2.2.3",
+    "react-redux": "^5.0.2",
+    "react-router": "^3.0.2",
+    "redux-thunk": "^2.2.0"
   }
 }
