--- a/package.json
+++ b/package.json
@@ -62,9 +62,11 @@
   },
   "dependencies": {
     "core-js": "^2.0.0",
+    "i18next": "^6.0.2",
     "normalize.css": "^4.0.0",
     "react": "^15.0.0",
     "react-dom": "^15.0.0",
+    "react-i18next": "^2.0.1",
     "react-redux": "^5.0.2",
     "react-router": "^3.0.2",
     "redux-thunk": "^2.2.0"
