--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "react-dom": "^15.0.0",
     "react-redux": "^5.0.2",
     "react-router": "^3.0.2",
+    "redux": "^3.6.0",
     "redux-thunk": "^2.2.0"
   }
 }
